--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -1,9 +1,9 @@
 .hero {
-  padding-top: 150px;
+  /* padding-top: 150px; */
 }
 
 .my_title {
-  margin-bottom: 200px;
+  /* margin-bottom: 200px; */
 }
 
 
@@ -13,7 +13,7 @@
   display: flex;
   width: 80%;
   margin: 0 auto;
-  padding: 60px;
+  padding: 40px;
   color: white;
 
   line-height: 1.7;
@@ -33,12 +33,14 @@
 }
 
 .icons {
+  padding: 0;
+  margin: 0;
   font-size: 24px;
 }
 
 .pitch {
   font-size: 18px;
-  margin: 30px 0;
+  margin: 32px 0;
 }
 
 .my_name {
@@ -50,6 +52,7 @@
 }
 
 .button {
-  position: right;
+  position: inherit;
+  right: 0px;
   font-size: 18px;
 }
