--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   background: #121212;
   font-family: 'Cabin', sans-serif;
@@ -10,5 +14,9 @@ body {
   text-align: center;
 }
 
+
+.footer {
+  margin-top: 150px;
+}
 
 
