--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -2,18 +2,13 @@
   padding: 0 0 150px 0;
 } */
 
-.my_title {
-  margin-bottom: 150px;
-}
-
-
 .hero {
-  background: rgba(251, 252, 250, 0.020);
+  background: rgba(251, 252, 250, 0.02);
   border-radius: 5px;
   display: flex;
   width: 80%;
   margin: 0 auto;
-  padding: 64px;
+  padding: 48px;
   color: white;
 
   line-height: 1.7;
@@ -53,6 +48,7 @@
 
 .profile_picture {
   max-width: 100%;
+  border-radius: 50%;
 }
 
 .button {
