--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -2,13 +2,18 @@
   padding: 0 0 150px 0;
 } */
 
+.my_title {
+  margin-bottom: 150px;
+}
+
+
 .hero {
-  background: rgba(251, 252, 250, 0.02);
+  background: rgba(251, 252, 250, 0.020);
   border-radius: 5px;
   display: flex;
   width: 80%;
   margin: 0 auto;
-  padding: 48px;
+  padding: 64px;
   color: white;
 
   line-height: 1.7;
@@ -42,17 +47,71 @@
   font-size: 56px;
 }
 
-/* .image {
-  width: 450px;
-} */
+.image {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-right: 32px;
+}
 
 .profile_picture {
   max-width: 100%;
-  border-radius: 50%;
+  border-radius: 16px;
+  
 }
 
 .button {
   position: inherit;
   right: 0px;
   font-size: 18px;
+}
+
+
+/* MEDIA QUERY */
+
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
+    .my_title {
+      font-size: 16px;
+      padding: 0;
+      margin: 0;
+    }
+
+    .hero {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      padding: 32px
+    }
+
+    .my_name {
+      font-size: 40px;
+      text-align: center;
+    }
+
+    .info_text {
+      font-size: 24px;
+      text-align: center;
+      padding: 16px;
+      /* margin: 0 16px; */
+    }
+
+    .hero_text_heading {
+      font-size: 24px;
+      padding: 16px;
+    }
+
+    .location {
+      font-size: 20px;
+      padding-bottom: 16px;
+    }
+
+    .image {
+      margin: 40px 0;
+    }
 }
