media query for menu at max-width of 600px

--- a/src/components/menu.styles.css
+++ b/src/components/menu.styles.css
@@ -21,3 +21,16 @@
   text-decoration: none;
   padding-left: 32px;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    max-width: 600px;
+  }
+
+  .logo {
+    font-size: 16px;
+  }
+
+  .menu {
+  }
+}
