--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -6,9 +6,8 @@
   margin-bottom: 150px;
 }
 
-
 .hero {
-  background: rgba(251, 252, 250, 0.020);
+  background: rgba(251, 252, 250, 0.02);
   border-radius: 5px;
   display: flex;
   width: 80%;
@@ -57,7 +56,6 @@
 .profile_picture {
   max-width: 100%;
   border-radius: 16px;
-  
 }
 
 .button {
@@ -66,52 +64,45 @@
   font-size: 18px;
 }
 
-
 /* MEDIA QUERY */
 
+@media only screen and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .my_title {
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+  }
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
+  .hero {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+  }
 
-    .my_title {
-      font-size: 16px;
-      padding: 0;
-      margin: 0;
-    }
+  .my_name {
+    font-size: 40px;
+    text-align: center;
+  }
 
-    .hero {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      padding: 32px
-    }
+  .info_text {
+    font-size: 24px;
+    text-align: center;
+    padding: 16px;
+    /* margin: 0 16px; */
+  }
 
-    .my_name {
-      font-size: 40px;
-      text-align: center;
-    }
+  .hero_text_heading {
+    font-size: 24px;
+    padding: 16px;
+  }
 
-    .info_text {
-      font-size: 24px;
-      text-align: center;
-      padding: 16px;
-      /* margin: 0 16px; */
-    }
+  .location {
+    font-size: 20px;
+    padding-bottom: 16px;
+  }
 
-    .hero_text_heading {
-      font-size: 24px;
-      padding: 16px;
-    }
-
-    .location {
-      font-size: 20px;
-      padding-bottom: 16px;
-    }
-
-    .image {
-      margin: 40px 0;
-    }
+  .image {
+    margin: 40px 0;
+  }
 }
