--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -20,7 +20,7 @@
 .info_text {
   padding: 0 40px;
   text-align: left;
-  font-size: 24px;
+  /* font-size: 24px; */
 }
 
 .info_text_heading {
@@ -28,7 +28,7 @@
 }
 
 .location {
-  font-size: 24pxpx;
+  font-size: 24px;
   padding-bottom: 16px;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .my_name {
-  font-size: 48px;
+  /* font-size: 48px; */
 }
 
 .image {
@@ -61,9 +61,41 @@
 }
 
 .button {
+  width: 150px;
   position: inherit;
   right: 0px;
   font-size: 18px;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin-right: 10px;
+}
+
+.button:hover {
+  background-color: transparent;
+  border: 2px solid white;
+  color: #fff;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 150px;
+  justify-content: center;
+  border-top: 1px solid #ccc;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.social-icons {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  color: black;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 3px;
 }
 
 /* MEDIA QUERY */
