--- a/src/components/contact.styles.css
+++ b/src/components/contact.styles.css
@@ -1,3 +1,64 @@
+.contact-form {
+  background: rgba(251, 252, 250, 0.02);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  padding: 48px;
+  color: white;
+  line-height: 1.7;
+}
+
 .contact-heading {
-    font-size: 64px;
+  font-size: 48px;
+}
+
+.form-group {
+  width: 600px;
+  margin: 40px auto;
+  display: flex;
+  justify-content: space-between;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+}
+
+input,
+textarea {
+  flex: 0.7;
+  align-items: flex-end;
+  padding-left: 20px;
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 3px;
+  background-color: transparent;
+  /* width: 00px; */
+}
+
+textarea {
+  height: 100px;
+}
+
+.text-muted {
+  display: flex;
+  flex: 0.3;
+  align-items: flex-start;
+  /* margin-right: 40px; */
+}
+
+#submit {
+  width: 150px;
+  position: inherit;
+  right: 0px;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin-right: 10px;
+}
+
+#submit:hover {
+  background-color: transparent;
+  border: 2px solid white;
+  color: #fff;
+  transition: 0.6s;
 }
