--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -1,4 +1,4 @@
-.projects {
+.projectContainer {
   width: 80%;
   margin: 40px auto;
   flex-direction: row;
@@ -14,7 +14,7 @@
   padding: 20px 0;
 }
 
-.projects h2 {
+.projectContainer h2 {
   font-size: 32px;
   padding-bottom: 32px;
 }
@@ -30,4 +30,26 @@
 
 .button {
   width: 200px;
+}
+
+
+/* MEDIA Query */
+
+@media screen and (min-width: 200px) and (max-width: 736px){
+  .projects {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding: 0; */
+    /* margin: 0; */
+  }
+
+  .project_description {
+    padding: 0;
+  }
 }
