--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -30,6 +30,16 @@
 
 .button {
   width: 200px;
+  cursor: pointer;
+}
+
+
+.button:hover,
+.MuiSvgIcon-root:hover {
+  background-color: transparent;
+  border: 2px solid white;
+  color: #fff;
+  transition: 0.6s;
 }
 
 
@@ -51,5 +61,15 @@
 
   .project_description {
     padding: 0;
+  }
+
+  .project_image {
+    padding: 0;
+
+    margin: 20px 0;
+  }
+
+  .button {
+    margin-bottom: 20px;
   }
 }
