--- a/src/components/contact.styles.css
+++ b/src/components/contact.styles.css
@@ -35,7 +35,7 @@ textarea {
   /* width: 00px; */
 }
 
-textarea {
+textarea:focus {
   height: 100px;
 }
 
@@ -48,8 +48,8 @@ textarea {
 
 #submit {
   width: 150px;
-  position: inherit;
-  right: 0px;
+  /* position: inherit;
+  right: 0px; */
   font-size: 18px;
   cursor: pointer;
   padding: 5px 10px;
@@ -61,4 +61,34 @@ textarea {
   border: 2px solid white;
   color: #fff;
   transition: 0.6s;
+}
+
+@media only screen and (min-width: 280px) and (max-width: 812px) {
+  body {
+    max-width: 100vw;
+  }
+
+  .contact-heading {
+    font-size: 24px;
+  }
+  .contact-form {
+    padding: 20px;
+    font-size: 24px;
+  }
+
+  .form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form-control {
+    max-width: 100vw;
+  }
+
+  input {
+    display: flex;
+    max-width: 100%;
+    flex: 1;
+  }
 }
