--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -43,12 +43,11 @@
   margin: 32px 0;
 }
 
-.my_name {
-  /* font-size: 48px; */
-}
+
 
 .image {
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
   margin-right: 32px;
@@ -58,6 +57,14 @@
   align-self: start;
   max-width: 100%;
   border-radius: 16px;
+}
+
+.tags {
+  background: #906860;
+  border-radius: 16px;
+  margin-top: 32px;
+  color: black;
+  padding: 16px;
 }
 
 .button {
@@ -140,8 +147,10 @@
 
   .image {
     display: none;
+    flex-direction: column;
     width: 80vw;
     margin: 40px 0;
+    border:1px solid white;
   }
 
   .image img {
