--- a/src/components/menu.styles.css
+++ b/src/components/menu.styles.css
@@ -40,13 +40,14 @@
 
   .logo {
     font-size: 16px;
+    align-self: flex-start;
   }
 
   .menu {
     margin: 16px 32px 100px 32px;
   }
 
-  .list {
+  .close {
     visibility: hidden;
   }
 
@@ -54,6 +55,7 @@
     display: block;
     width: 30px;
     height: auto;
+    align-self: baseline;
   }
 
   .slides {
@@ -63,6 +65,24 @@
     margin-bottom: 8px;
     cursor: pointer;
     display: block;
+  }
+
+  .open {
+    background:burlywood;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    z-index: 111;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .open a {
+    padding: 50px 0;
+    /* display: flex; *
+    color: black;
+    /* padding: 20px 0; */
   }
 
   .footer {
