--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -33,7 +33,6 @@
   cursor: pointer;
 }
 
-
 .button:hover,
 .MuiSvgIcon-root:hover {
   background-color: transparent;
@@ -42,13 +41,12 @@
   transition: 0.6s;
 }
 
-
 /* MEDIA Query */
 
-@media screen and (min-width: 200px) and (max-width: 736px){
+@media only screen and (min-width: 280px) and (max-width: 768px) {
   .projects {
-      display: flex;
-      flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   .project {
