--- a/src/components/about.style.css
+++ b/src/components/about.style.css
@@ -1,4 +1,4 @@
-.containter {
+.container {
   width: 80%;
   margin: 40px auto;
   flex-direction: row;
@@ -6,4 +6,9 @@
   border-radius: 5px;
   padding: 32px;
   color: white;
+  text-align: left;
+}
+
+.container p {
+  margin-bottom: 30px;
 }
