styling layout for about page

--- a/src/components/about.style.css
+++ b/src/components/about.style.css
@@ -9,6 +9,11 @@
   text-align: left;
 }
 
+.container h1 {
+  padding: 40px 0;
+  text-align: center;
+}
+
 .container p {
   margin-bottom: 30px;
 }
