--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -19,6 +19,7 @@
 }
 
 .info_text {
+  flex: .6;
   padding: 0 40px;
   text-align: left;
   /* font-size: 24px; */
@@ -48,6 +49,7 @@
 
 .image {
   display: flex;
+  flex: .4;
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -61,11 +63,14 @@
 }
 
 .tags {
+  max-width: 100%;
   background: #906860;
   border-radius: 16px;
   margin-top: 32px;
   color: black;
-  padding: 16px;
+  padding: 16px 5px;
+  text-align: left;
+  font-size: 10px;
 }
 
 .button {
