continuing to test different layout

--- a/src/components/about.style.css
+++ b/src/components/about.style.css
@@ -17,3 +17,21 @@
 .container p {
   margin-bottom: 30px;
 }
+
+.container_detail {
+  display: flex;
+}
+
+.container_images {
+  flex: 0.6;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container_images img {
+  padding: 0 10px 20px 10px;
+}
+
+.container_text {
+  flex: 0.4;
+}
