--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -19,7 +19,7 @@
 }
 
 .info_text {
-  flex: .6;
+  flex: 0.6;
   padding: 0 40px;
   text-align: left;
   /* font-size: 24px; */
@@ -45,11 +45,9 @@
   margin: 32px 0;
 }
 
-
-
 .image {
   display: flex;
-  flex: .4;
+  flex: 0.4;
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -70,7 +68,7 @@
   color: black;
   padding: 16px 5px;
   text-align: left;
-  font-size: 10px;
+  /* font-size: 10px; */
 }
 
 .button {
@@ -91,17 +89,15 @@
   transition: 0.6s;
 }
 
-.footer {
+/* .footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 150px;
   justify-content: center;
-  border-top: 1px solid #ccc;
-  text-transform: uppercase;
-  font-size: 18px;
+  
   font-weight: 600;
-}
+} */
 
 .MuiSvgIcon-root {
   /* width: 30px; */
@@ -156,7 +152,7 @@
     flex-direction: column;
     width: 80vw;
     margin: 40px 0;
-    border:1px solid white;
+    border: 1px solid white;
   }
 
   .image img {
@@ -165,6 +161,8 @@
 
   .footer {
     font-size: 14px;
+    position: relative;
+    bottom: 0;
   }
 
   .MuiSvgIcon-root {
