--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,11 @@ a {
 }
 
 .footer {
+  position: relative;
+  bottom: 0;
+  border-top: 1px solid #ccc;
+  text-transform: uppercase;
+  font-size: 18px;
+  width: 100vw;
   margin-top: 150px;
 }
