--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,10 @@ a {
 .footer {
   position: relative;
   bottom: 0;
-  border-top: 1px solid #ccc;
+  border-top: .2px solid rgba(255, 255, 255, .2);
   text-transform: uppercase;
   font-size: 18px;
   width: 100vw;
+  padding: 30px 0;
   margin-top: 150px;
 }
