--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,11 @@ a {
 .footer {
   position: relative;
   bottom: 0;
-  border-top: .2px solid rgba(255, 255, 255, .2);
+  border-top: 0.2px solid rgba(255, 255, 255, 0.2);
   text-transform: uppercase;
   font-size: 18px;
   width: 100vw;
+  height: 40px;
   padding: 30px 0;
   margin-top: 150px;
 }
