--- a/src/components/menu.styles.css
+++ b/src/components/menu.styles.css
@@ -79,7 +79,7 @@
 
   .open {
     background: white;
-    color: black;
+    color: #906860;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -90,16 +90,12 @@
   }
 
   .open a {
-    padding: 60px 0;
-    color: black;
-    font-size: 48px;
+    padding: 50px 0;
+    color: #906860;
+    font-size: 32px;
     font-weight: 800;
     /* display: flex; *
     color: black;
     /* padding: 20px 0; */
-  }
-
-  .footer {
-    margin-top: 50px;
   }
 }
