--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -1,31 +1,64 @@
 .projectContainer {
   width: 80%;
   margin: 40px auto;
+  display: flex;
+  justify-content: center;
   flex-direction: row;
-  background: rgba(251, 252, 250, 0.02);
+  flex-wrap: wrap;
+  /* background: rgba(251, 252, 250, 0.02); */
   border-radius: 5px;
   padding: 32px;
   color: white;
 }
 
-.project {
+.project_card {
+  background: #906860;
+  width: 300px;
+  height: 380px;
   display: flex;
-  justify-content: space-between;
-  padding: 20px 0;
+  flex: 0.25;
+  margin: 15px;
+  /* justify-content: space-between; */
+  flex-direction: column;
+  border-radius: 10px;
+  /* padding: 20px 0; */
 }
 
-.projectContainer h2 {
-  font-size: 32px;
-  padding-bottom: 32px;
-}
-
-.project_image {
-  padding-right: 32px;
-}
-
-.project_description {
+.project_card .content {
+  visibility: hidden;
+  font-size: 12px;
   text-align: left;
-  padding: 0 32px;
+  padding-left: 16px;
+}
+
+.project_card .content ul {
+  text-align: left;
+  padding-left: 16px;
+}
+
+.project_card .content li {
+  list-style: none;
+  align-self: initial;
+}
+
+.project_card:hover .content {
+  visibility: visible;
+}
+
+.img_box {
+  width: 290px;
+  /* padding: 10px; */
+}
+
+.img_box img {
+  margin: 20px auto;
+  width: 250px;
+  border-radius: 10px;
+}
+
+.project_card:hover {
+  cursor: pointer;
+  height: 618px;
 }
 
 .button {
@@ -44,17 +77,9 @@
 /* MEDIA Query */
 
 @media only screen and (min-width: 280px) and (max-width: 768px) {
-  .projects {
+  .project_card {
     display: flex;
     flex-direction: column;
-  }
-
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* padding: 0; */
-    /* margin: 0; */
   }
 
   .project_description {
