--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background: #121212;
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
   line-height: 1.5rem;
   color: whitesmoke;
