--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -13,8 +13,8 @@
 
 .project_card {
   background: #906860;
-  width: 300px;
-  height: 380px;
+  width: 500px;
+  height: 500px;
   display: flex;
   flex: 0.25;
   margin: 15px;
@@ -24,11 +24,16 @@
   /* padding: 20px 0; */
 }
 
+/* .project_card_name {
+  margin: 20px;
+} */
+
 .project_card .content {
   visibility: hidden;
-  font-size: 12px;
+  font-size: 16px;
   text-align: left;
   padding-left: 16px;
+  margin-top: 20px;
 }
 
 .project_card .content ul {
@@ -46,24 +51,36 @@
 }
 
 .img_box {
-  width: 290px;
+  width: 500px;
+  display: flex;
   /* padding: 10px; */
 }
 
 .img_box img {
-  margin: 20px auto;
-  width: 250px;
+  margin: 45px auto;
+  width: 350px;
   border-radius: 10px;
 }
 
 .project_card:hover {
-  cursor: pointer;
-  height: 618px;
+  /* cursor: pointer; */
+  height: auto;
+  padding-bottom: 30px;
+  transition: 1s ease;
+}
+
+.btn {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .button {
   width: 200px;
   cursor: pointer;
+  background-color: white;
+  border: none;
+  outline: none;
 }
 
 .button:hover,
@@ -73,6 +90,14 @@
   color: #fff;
   transition: 0.6s;
 }
+
+.stack {
+  margin: 10px 0;
+  font-weight: 800;
+  font-size: 18px;
+}
+
+
 
 /* MEDIA Query */
 
