--- a/src/components/contact.styles.css
+++ b/src/components/contact.styles.css
@@ -23,15 +23,17 @@
   /* justify-content: space-between; */
 }
 
-input,
-textarea {
+.form_input {
   flex: 0.7;
   align-items: flex-end;
   padding-left: 20px;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 3px;
-  background-color: transparent;
+  background-color: #fff;
+  color: #906860;
+  font-size: 16px;
+  font-weight: 800;
   /* width: 00px; */
 }
 
@@ -48,12 +50,9 @@ textarea:focus {
 
 #submit {
   width: 150px;
-  /* position: inherit;
-  right: 0px; */
   font-size: 18px;
   cursor: pointer;
   padding: 5px 10px;
-  margin-right: 10px;
 }
 
 #submit:hover {
