--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 html {
   box-sizing: border-box;
+  background: #121212;
 }
 
 body {
-  background: #121212;
-  font-family: 'Ubuntu', sans-serif;
+  /* display: flex;
+  justify-content: center; */
+  width: 100%;
+  font-family: "Ubuntu", sans-serif;
   font-size: 16px;
-  line-height: 1.5rem;
+  line-height: 1.7rem;
   color: whitesmoke;
 }
 
@@ -26,7 +29,7 @@ a {
   border-top: 0.2px solid rgba(255, 255, 255, 0.2);
   text-transform: uppercase;
   font-size: 18px;
-  width: 100vw;
+  width: 100%;
   height: 40px;
   padding: 30px 0;
   margin-top: 150px;
