--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -20,9 +20,7 @@
 
 .info_text {
   flex: 0.6;
-  padding: 0 40px;
   text-align: left;
-  /* font-size: 24px; */
 }
 
 .info_text_heading {
@@ -71,6 +69,12 @@
   /* font-size: 10px; */
 }
 
+.btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .button {
   width: 150px;
   position: inherit;
@@ -88,16 +92,6 @@
   color: #fff;
   transition: 0.6s;
 }
-
-/* .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 150px;
-  justify-content: center;
-  
-  font-weight: 600;
-} */
 
 .MuiSvgIcon-root {
   /* width: 30px; */
@@ -120,10 +114,10 @@
   }
 
   .hero {
-    /* text-align: justify; */
-    display: flex;
-    flex-direction: column;
-    padding: 32px;
+    width: 90vw;
+    padding: 24px;
+    /* display: flex; */
+    /* flex-direction: column; */
   }
 
   .my_name {
@@ -131,9 +125,15 @@
     /* text-align: center; */
   }
 
+  .pitch {
+    /* margin: 0; */
+  }
+
   .info_text {
+    flex: 1;
     font-size: 24px;
-    padding: 16px;
+    width: 100%;
+    /* padding: 16px; */
     /* margin: 0 16px; */
   }
 
@@ -153,10 +153,6 @@
     width: 80vw;
     margin: 40px 0;
     border: 1px solid white;
-  }
-
-  .image img {
-    width: 100%;
   }
 
   .footer {
