--- a/src/components/menu.styles.css
+++ b/src/components/menu.styles.css
@@ -1,10 +1,9 @@
 .menu {
-  /* width: 100%; */
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 16px 32px 150px 32px;
+  padding: 16px 32px 150px 32px;
   font-size: 16px;
-  position: relative;
 }
 
 .logo {
@@ -20,6 +19,7 @@
   display: flex;
   position: absolute;
   right: 0px;
+  padding-right: 32px;
 }
 
 .list a {
@@ -43,17 +43,19 @@
 
 @media only screen and (min-width: 280px) and (max-width: 768px) {
   body {
-    max-width: 100vw;
+    width: 100vw;
   }
 
-  .logo {
+  .menu .logo {
     font-size: 16px;
     align-self: flex-start;
     z-index: 0;
   }
 
   .menu {
-    margin: 16px 32px 100px 32px;
+    display: flex;
+    justify-content: space-between;
+    /* margin: 16px 32px 40px 32px; */
   }
 
   .close {
