--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   /* display: flex;
   justify-content: center; */
   width: 100%;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   line-height: 1.7rem;
   color: whitesmoke;
