--- a/src/components/about.style.css
+++ b/src/components/about.style.css
@@ -22,6 +22,7 @@
 
 .container h1 {
   padding: 40px 0;
+  font-weight: 400;
 }
 
 .container p {
@@ -51,7 +52,7 @@
   text-align: left;
 }
 
-@media only screen and (min-width: 280px) and (max-width: 768px) {
+@media only screen and (min-width: 280px) and (max-width: 914px) {
   .container_detail {
     display: flex;
     flex-direction: column;
