--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -15,7 +15,9 @@
   margin: 0 auto;
   padding: 64px;
   color: white;
-  line-height: 1.7;
+  line-height: 1.8;
+  letter-spacing: 1.2px;
+  font-weight: 200;
 }
 
 .info_text {
@@ -25,6 +27,12 @@
 
 .info_text_heading {
   font-size: 32px;
+  font-weight: 400;
+}
+
+.my_name,
+.location {
+  font-weight: 400;
 }
 
 .location {
@@ -43,6 +51,12 @@
   margin: 32px 0;
 }
 
+.skill {
+  color: #906860;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
 .image {
   display: flex;
   flex: 0.4;
@@ -59,19 +73,22 @@
 }
 
 .tags {
+  text-align: center;
   max-width: 100%;
+  min-width: 280px;
   background: #906860;
   border-radius: 16px;
   margin-top: 32px;
   color: black;
   padding: 16px 5px;
-  text-align: left;
+  font-weight: 400;
+  /* text-align: left; */
   /* font-size: 10px; */
 }
 
 .btn {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -82,7 +99,10 @@
   font-size: 18px;
   cursor: pointer;
   padding: 5px 10px;
-  margin-right: 10px;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  background: #906860;
+  border-radius: 3px;
 }
 
 .button:hover,
@@ -153,6 +173,10 @@
     width: 80vw;
     margin: 40px 0;
     border: 1px solid white;
+  }
+
+  .btn {
+    flex-direction: column;
   }
 
   .footer {
