--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -78,16 +78,16 @@
 .button {
   width: 200px;
   cursor: pointer;
-  background-color: white;
+  /* background-color: white; */
   border: none;
   outline: none;
 }
 
 .button:hover,
 .MuiSvgIcon-root:hover {
-  background-color: transparent;
+  background-color: white;
   border: 2px solid white;
-  color: #fff;
+  color: #000;
   transition: 0.6s;
 }
 
