--- a/src/components/about.style.css
+++ b/src/components/about.style.css
@@ -8,7 +8,7 @@
   padding: 32px;
   color: white;
   text-align: left; */
-
+font-family: 'Lato', sans-serif;
   background: rgba(251, 252, 250, 0.02);
   border-radius: 5px;
   display: flex;
@@ -22,7 +22,7 @@
 
 .container h1 {
   padding: 40px 0;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .container p {
@@ -33,6 +33,7 @@
   display: flex;
   justify-content: center;
   padding: 32px;
+  font-weight: 200;
 }
 
 .container_image {
