--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -1,26 +1,26 @@
-.projectContainer {
+/* .projectContainer {
   width: 80%;
   margin: 40px auto;
   display: flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  /* background: rgba(251, 252, 250, 0.02); */
+  background: rgba(251, 252, 250, 0.02);
   border-radius: 5px;
   padding: 32px;
   color: white;
-}
+} */
 
 .project_card {
-  background: #906860;
+  /* background: #906860;
   width: 500px;
   height: 500px;
   display: flex;
   flex: 0.25;
-  margin: 15px;
+  margin: 15px; */
   /* justify-content: space-between; */
-  flex-direction: column;
-  border-radius: 10px;
+  /* flex-direction: column;
+  border-radius: 10px; */
   /* padding: 20px 0; */
 }
 
