redesign projectlist component

--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -1,4 +1,5 @@
-/* .projectContainer {
+.projectContainer {
+  font-weight: 200;
   width: 80%;
   margin: 40px auto;
   display: flex;
@@ -9,9 +10,11 @@
   border-radius: 5px;
   padding: 32px;
   color: white;
-} */
+} 
 
 .project_card {
+  
+  height: 500px;
   /* background: #906860;
   width: 500px;
   height: 500px;
@@ -24,10 +27,30 @@
   /* padding: 20px 0; */
 }
 
+.project_card--title{
+  margin-bottom: 3rem;
+  font-weight: 200;
+}
+
+.project_card--image {
+  border-radius: 3px;
+  margin-bottom: 2rem;
+  max-height: 320px;
+}
+
+.project_card--box:not(:last-child) {
+  margin-right: 2rem;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+}
+
 /* .project_card_name {
   margin: 20px;
 } */
-
+/* 
 .project_card .content {
   visibility: hidden;
   font-size: 16px;
@@ -38,7 +61,6 @@
 
 .project_card .content ul {
   text-align: left;
-  /* padding-left: 16px; */
 }
 
 .project_card .content li {
@@ -53,7 +75,6 @@
 .img_box {
   width: 500px;
   display: flex;
-  /* padding: 10px; */
 }
 
 .img_box img {
@@ -63,7 +84,6 @@
 }
 
 .project_card:hover {
-  /* cursor: pointer; */
   height: auto;
   padding-bottom: 30px;
   transition: 1s ease;
@@ -77,12 +97,10 @@
 
 .button {
   width: 200px;
-  cursor: pointer;
-  /* background-color: white; */
   border: none;
   outline: none;
-}
-
+} */
+/* 
 .button:hover,
 .MuiSvgIcon-root:hover {
   background-color: white;
@@ -95,12 +113,12 @@
   margin: 10px 0;
   font-weight: 800;
   font-size: 18px;
-}
+} */
 
 /* MEDIA Query */
 
 @media only screen and (min-width: 280px) and (max-width: 768px) {
-  .projectContainer {
+  /* .projectContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -128,11 +146,9 @@
 
   .project_image {
     padding: 0;
-
-    /* margin: 20px 0; */
   }
 
   .button {
     margin-bottom: 20px;
-  }
+  } */
 }
