--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,16 @@ a {
 .footer {
   position: relative;
   bottom: 0;
-  border-top: 0.2px solid rgba(255, 255, 255, 0.2);
+  border-top: 0.2px solid rgba(144, 105, 96, .3);
+  color: #fff;
   text-transform: uppercase;
   font-size: 18px;
   width: 100%;
   height: 40px;
   padding: 30px 0;
   margin-top: 150px;
+}
+
+.emoji {
+  color: #ff0000;
 }
