--- a/src/components/hero.style.css
+++ b/src/components/hero.style.css
@@ -94,16 +94,22 @@
 }
 
 .button {
-  width: 150px;
+  width: 120px;
   position: inherit;
   right: 0px;
   font-size: 18px;
   cursor: pointer;
   padding: 5px 10px;
-  margin-right: 1rem;
+  outline: none;
+  /* margin-right: 10px; */
   margin-bottom: 1rem;
   background: #906860;
   border-radius: 3px;
+}
+
+.info_text .button {
+  width: 150px;
+  margin-right: 1rem;
 }
 
 .button:hover,
@@ -115,13 +121,14 @@
 }
 
 .MuiSvgIcon-root {
-  /* width: 30px; */
-  height: 30px;
-  background-color: #fff;
-  color: black;
-  padding: 10px;
+  /* width: 50px;
+  height: 50px; */
+  font-size: 32px;
+  background-color: #906860;
+  color: #fff;
+  /* padding: 10px; */
   margin: 10px;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   border-radius: 3px;
 }
 
