--- a/src/components/contact.styles.css
+++ b/src/components/contact.styles.css
@@ -18,10 +18,17 @@
   width: 600px;
   margin: 40px auto;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
 }
+
+.form-group p {
+  margin-top: 10px;
+  text-align: left;
+  color: #906860;
+  font-weight:600;
+}
+
 
 .form_input {
   flex: 0.7;
@@ -31,10 +38,10 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 3px;
   background-color: #fff;
-  color: #906860;
   font-size: 16px;
   font-weight: 800;
-  /* width: 00px; */
+  width: 100%;
+  margin-top: 10px;
 }
 
 textarea:focus {
@@ -61,6 +68,11 @@ textarea:focus {
   border: 2px solid white;
   color: #fff;
   transition: 0.6s;
+}
+
+
+.validation {
+  display: "";
 }
 
 @media only screen and (min-width: 280px) and (max-width: 812px) {
