--- a/src/components/detailPage.css
+++ b/src/components/detailPage.css
@@ -1,4 +1,44 @@
-/* h1 {
+body {
   color: white;
-  font-size: 36px;
-} */
+  line-height: 1.8;
+  letter-spacing: 1.2px;
+  font-weight: 200;
+}
+
+
+#project_name {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 32px;
+  margin-bottom: 32px;
+  /* padding-right: 64px; */
+ 
+}
+
+.project_title {
+  text-align: justify;
+  width: 75%;
+}
+
+
+.project_technologies {
+  min-width: 25%;
+  text-align: left;
+  padding-left: 64px;
+}
+
+li {
+  list-style: none;
+}
+
+
+img {
+  margin-bottom: 16px;
+  max-width: 100%;
+}
