--- a/src/components/detailPage.css
+++ b/src/components/detailPage.css
@@ -6,6 +6,11 @@ body {
 }
 
 
+.container{
+  /* padding: 32px; */
+}
+
+
 #project_name {
   margin-top: 32px;
   margin-bottom: 32px;
@@ -31,6 +36,7 @@ body {
   min-width: 25%;
   text-align: left;
   padding-left: 64px;
+  margin-right: 0;
 }
 
 li {
@@ -39,8 +45,7 @@ li {
 
 
 img {
-  
-  margin: 32px auto;
+  margin: 16px auto;
   max-width: 95%;
 }
 
