--- a/src/components/project.styles.css
+++ b/src/components/project.styles.css
@@ -1,3 +1,9 @@
+.container {
+  padding-top: 40px;
+  font-weight: 300;
+}
+
+
 .projectContainer {
   font-weight: 200;
   width: 80%;
@@ -6,9 +12,8 @@
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  background: rgba(251, 252, 250, 0.02);
   border-radius: 5px;
-  padding: 32px;
+  /* padding: 32px; */
   color: white;
 } 
 
