--- a/src/components/contact.styles.css
+++ b/src/components/contact.styles.css
@@ -43,10 +43,21 @@
 
 
 
-@media only screen and (min-width: 280px) and (max-width: 812px) {
+@media only screen and (min-width: 280px) and (max-width: 914px) {
   body {
     max-width: 100vw;
   }
+
+  .container {
+    padding: 0;
+    margin: 0 auto;
+  }
+  .contact-form {
+    min-width: 280px;
+    width: 300px;
+    margin: 0 auto;
+  }
+
 
   
 }
